# tda-rs

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
src/: complex.rs  distance.rs  landscape.rs  lib.rs  mapper.rs  nerve.rs  persistence.rs  statistics.rs
