[package]
name = "tda-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/tda-rs"
description = "Topological Data Analysis in Rust — persistent homology, simplicial complexes, Mapper algorithm, Betti curves"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13"
rand = "0.8"
